# chat-billing

./: .env.dev  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
__test__/: test_llm.py
api/: schema.py
app/: backend.py
app/dependency/: auth_dependency.py  db_dependency.py  llm_dependency.py
app/infrastructure/db/: postgresql_connection_manager.py
app/infrastructure/db/initialize/implementation/: postgresql_database.py  sqlite_database.py
app/infrastructure/db/initialize/interface/: base_database.py
app/infrastructure/db/initialize/rag/: rag.py
app/infrastructure/db/model/ORM/: document_orm.py  message_orm.py  transaction_orm.py  user_orm.py
app/infrastructure/db/model/request/: message_request.py  move_transaction_request.py  transaction_request.py  user_request.py
app/infrastructure/db/model/response/: message_response.py  transaction_response.py  user_balance_reponse.py  user_response.py
app/infrastructure/db/repository/: base_repository.py
app/infrastructure/db/repository/interface/: base_message_repository.py  (+3 more)
app/prompt/: prompts.py
app/rag/: rag.py
app/router/: auth_router.py  chat_router.py
app/service/implementation/: agent_service.py  auth_service.py  chat_session_manager.py  db_service.py  llama_llm_service.py  message_service.py  transaction_service.py
app/service/interface/: base_agent_service.py  base_auth_service.py  base_chat_session_manager.py  base_db_service.py  base_llm_service.py  base_message_service.py  base_transaction_service.py  llm_service.py
app/utils/: constants.py  settings.py
services/: llm.py
(+13 files in other folders)
