[project]
name = "chatbilling"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.28",
    "passlib>=1.7.4",
    "pgvector>=0.4.1",
    "pypdf>=5.9.0",
    "sentence-transformers>=5.1.0",
]
